install_man('io_uring.7',
            'io_uring_cq_advance.3',
            'io_uring_cqe_get_data.3',
            'io_uring_cqe_seen.3',
            'io_uring_cq_ready.3',
            'io_uring_enter.2',
            'io_uring_free_probe.3',
            'io_uring_get_probe.3',
            'io_uring_get_sqe.3',
            'io_uring_opcode_supported.3',
            'io_uring_prep_msg_ring.3',
            'io_uring_prep_read.3',
            'io_uring_prep_read_fixed.3',
            'io_uring_prep_readv2.3',
            'io_uring_prep_readv.3',
            'io_uring_prep_write.3',
            'io_uring_prep_write_fixed.3',
            'io_uring_prep_writev2.3',
            'io_uring_prep_writev.3',
            'io_uring_queue_exit.3',
            'io_uring_queue_init.3',
            'io_uring_register.2',
            'io_uring_register_buffers.3',
            'io_uring_register_files.3',
            'io_uring_register_ring_fd.3',
            'io_uring_setup.2',
            'io_uring_sqe_set_data.3',
            'io_uring_sqe_set_flags.3',
            'io_uring_sq_ready.3',
            'io_uring_sqring_wait.3',
            'io_uring_sq_space_left.3',
            'io_uring_submit.3',
            'io_uring_submit_and_wait.3',
            'io_uring_submit_and_wait_timeout.3',
            'io_uring_unregister_buffers.3',
            'io_uring_unregister_files.3',
            'io_uring_unregister_ring_fd.3',
            'io_uring_wait_cqe.3',
            'io_uring_wait_cqe_nr.3',
            'io_uring_wait_cqes.3',
            'io_uring_wait_cqe_timeout.3')
